--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             margin: 0;
         }
 
+        html {
+            height: -webkit-fill-available;
+        }
+
         body {
             background-color: #1a5261;
             display: flex;
@@ -23,6 +27,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            min-height: -webkit-fill-available
         }
     </style>
 
