--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            height: 100%;
             min-height: -webkit-fill-available
         }
     </style>
